fix(style): overflows

--- a/src/styles.css
+++ b/src/styles.css
@@ -135,7 +135,8 @@ header {
   position: absolute;
   z-index: 2;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 35px;
   width: var(--sidebar-width);
   min-width: var(--sidebar-width);
@@ -185,6 +186,8 @@ header label input[type="checkbox"] {
 
 
 main {
+  position: relative;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
